Prevent scrollbar on /metagame
Fixes #12154.

--- a/shared_web/static/css/pd.css
+++ b/shared_web/static/css/pd.css
@@ -2404,6 +2404,7 @@ Charts
 
 .variable-height-bar-chart {
     margin-top: 1rem;
+    overflow: hidden; /* Prevent a scrollbar if height is a fraction of a pixel taller than the container. */
     width: 100%;
 }
 
